[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "*.pyc"]

[project]
name = "pytigon"
version = "0.260511"
description = "Pytigon - Application framework based on Django and wxWidgets"
authors = [
    {name = "Sławomir Chołaj", email = "slawomir.cholaj@gmail.com"},
]
license = {text = "LGPLv3"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=6.0",
    "fs>=2.4",
    "pytigon-lib",
    "asgiref>=3.0",
    "polib>=1.2",
    "whitenoise>=6.0",
    "diskcache>=5.0",
    "pscript>=0.7",
    "dj-database-url>=2.0",
    "dj-email-url>=1.0",
    "django-bootstrap5>=24.0",
    "django-cors-headers>=4.0",
    "django_select2>=8.0",
    "django-widget-tweaks>=1.5",
    "rules>=3.0",
]

[project.scripts]
ptig = "pytigon.pytigon_run:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "invoke>=2.0",
    "jsmin>=3.0",
    "libsass>=0.22",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pytigon", "pytigon_lib", "pytigon_gui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--ignore-glob=**/android_client.py",
    "--ignore=pytigon/prj",
    "--ignore=pytigon/commands/test_dispatcher.py",
    "-p", "no:dash",
    "-p", "no:xonsh",
]

[tool.setuptools.packages.find]
exclude = ["pytigon_lib*", "pytigon_gui*", "**/__pycache__", "__pycache__"]

[tool.coverage.run]
source = ["pytigon"]
omit = [
    "pytigon/prj/*",
    "pytigon_gui/*",
    "pytigon_lib/*",
    "*/migrations/*",
]
