[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytigon"
version = "0.260713"
description = "Pytigon - Application framework based on Django and wxWidgets"
authors = [
    {name = "Sławomir Chołaj", email = "slawomir.cholaj@gmail.com"},
]
license = {text = "LGPLv3"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=6.0",
    "fsspec>=2024.0",
    "pytigon-lib",
    "asgiref>=3.0",
    "polib>=1.2",
    "whitenoise>=6.0",
    "diskcache>=5.0",
    "pscript>=0.7",
    "dj-database-url>=2.0",
    "dj-email-url>=1.0",
    "django-bootstrap5>=24.0",
    "django-cors-headers>=4.0",
    "django_select2>=8.0",
    "django-widget-tweaks>=1.5",
    "rules>=3.0",
    "jsmin>=3.0",
    "libsass>=0.22",
]

[project.scripts]
ptig = "pytigon.pytigon_run:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "invoke>=2.0",
    "channels>=4.0",
]

[tool.setuptools.packages.find]
include = ["pytigon*"]
exclude = ["pytigon_lib*", "pytigon_gui*", "**/__pycache__", "*.pyc"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
force-exclude = true
exclude = ["pytigon/static_src", "pytigon/static", "pytigon/prj", "pytigon/ext_lib"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"pytigon/schserw/settings/__init__.py" = ["F403", "F405"]
"pytigon/schserw/settings/infra.py" = ["E402"]
"pytigon/schserw/settings/features.py" = ["B028"]
"pytigon/manage.py" = ["E402"]
"pytigon/schserw/make-messages.py" = ["E402", "F841"]
"pytigon/schserw/schsys/initdjango.py" = ["F821", "E711", "B007"]
"pytigon/schserw/schsys/context_processors.py" = ["E711", "E721", "F841", "B019"]
"pytigon/schserw/schsys/cache_message_storage.py" = ["B904"]
"pytigon/schserw/translate.py" = []
"pytigon/schserw/schsys/schema.py" = ["W291"]
"pytigon/schserw/schsys/templatetags/*.py" = ["B904", "E711", "E712", "E721", "E741", "F821", "F841", "W291", "B905"]
"pytigon/schserw/schsys/management/commands/*.py" = ["E721", "E741", "B007", "F841", "B905"]
"pytigon/appdata/plugins/standard/**/*.py" = ["E721", "E741", "F401", "F403", "F405", "F841", "B007", "B026", "B905", "W291"]
"pytigon/commands/**/*.py" = ["F841", "B904"]
"tests/schserw/schmiddleware/vary_test.py" = ["F403", "F405"]
"tests/test_ext_lib_django_storage.py" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["pytigon", "pytigon_lib", "pytigon_gui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--ignore-glob=**/android_client.py",
    "--ignore=pytigon/prj",
    "--ignore=pytigon/commands/test_dispatcher.py",
    "-p", "no:dash",
    "-p", "no:xonsh",
]

[tool.coverage.run]
source = ["pytigon"]
omit = [
    "pytigon/prj/*",
    "*/migrations/*",
]
